update robot